# STIprojekt

./: ArduinoLib.h  OOPa.py  OOPb.py  README.md  ardu01.c  areaA.c  bSearchA.c  bit2-1.c  bit2-2.c  bit2-3.c  bit2-4.c  bit2-5.c  bit2-6.c  bitA.c  bitB.c  bitshiftB.c  bitshifting.c  bot-training02.c  brokenCode.c  bubbleA.py  bubbleB.py  calcA.c  calcB.c  charMath.c  convertB.c  decode.c  decode2.c  decode3.c  even.c  even.cpp  even.py  even2.cpp  fact.c  findA.c  findBug.c  functions.c  headers.h  input_file.txt  insertionA.c  insertionB.c  (+19 more)
cppPractice/: Brakes.cpp  Brakes.hpp  Chassis.cpp  Chassis.hpp  Dragrace.cpp  Dragrace.hpp  Engine.cpp  Engine.hpp  Transmission.cpp  Transmission.hpp  Tyres.cpp  Tyres.hpp  Vehicle.cpp  Vehicle.hpp  car.cpp  car.hpp  main.cpp  makefile
cppPractice/cpp/: TTT-bot.c  math.cpp
cppPractice/leetcode/: char.cpp  commonPrefix.cpp
javatest/: index.html  script.js  styles.css
leetCode/: parentheses.cpp
playground/: .env
playground/apiProj/: api.ipynb  playground.ipynb  playwithchatgpt.ipynb  pyproject.toml  testjson.json
playground/drums/: drums.ipynb  pyproject.toml  simple.py  simple2.py  simpleTest.py
playground/houseapi/: .env  main.py  pyproject.toml  test.json  test.py  test2.py
playground/musikAPI/musikAPI/: pyproject.toml
playground/musikAPI/musikAPI/musikapi/: main.py
playground/sysint/: pyproject.toml
playground/sysint/sysint/: api.py  main.py
ticTacToe/: LCD.c  LCD.h  LED.c  LED.h  buttons.c  buttons.h  game.c  game.h  main.c  ticTacToe.ino
work/: areaB.c  arpgA.cpp  arpgB.cpp  avgGuesses.c  bSearchB.c  bitA.cpp  bitB.cpp  bitsA.c  bitsB.c  bot-training.c  bot-training.py  bot-training02.py  bubbleA.c  bubbleA.cpp  bubbleB.c  bubbleB.cpp  bubbleSortA.c  bubbleSortB.c  convertA.c  findB.c  guessA.c  guessB.c  interestA.c  maxA.c  modesA.py  modesB.py  notesA.c  notesB.c  notesGPT.c  overtonesA.c  overtonesB.c  overtonesGPT.c  rangesA.c  rangesB.c  reverse.c  showcaseA.py  showcaseB.c  superA.py  ticA.c  todo.cpp  (+5 more)
(+89 files in other folders)
