[tool.poetry]
name = "houseapi"
version = "0.1.0"
description = ""
authors = ["charlesporsbjer <118073335+charlesporsbjer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"
httpx = "^0.27.0"
rich = "^13.7.1"
asyncio = "^3.4.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
