[tool.poetry]
name = "musikapi"
version = "0.1.0"
description = ""
authors = ["charlesporsbjer <118073335+charlesporsbjer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
uuid = "^1.30"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
